# caffe_web_classify

./: CMakeLists.txt  Makefile  readme.md
src/: main.cpp
src/api/http/: classify_img.h  middleware.h  server.h
src/classify/: acr.cpp  acr.h  classifier.cpp  classifier.h
src/common/proto/: acr.grpc.pb.cc  acr.grpc.pb.h  acr.pb.cc  acr.pb.h  acr.proto
src/setting/: setting.json
src/test/: cr_ser.cpp  server.cpp
